After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 723912 - grid too small, unplayable
grid too small, unplayable
Status: RESOLVED FIXED
Product: five-or-more
Classification: Applications
Component: general
3.11.x
Other Linux
: High normal
: ---
Assigned To: Michael Catanzaro
five-or-more-maint
: 723068 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2014-02-08 16:33 UTC by Arnaud B.
Modified: 2014-02-16 23:47 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Always allocate enough space for the board (1.19 KB, patch)
2014-02-16 23:47 UTC, Michael Catanzaro
committed Details | Review

Description Arnaud B. 2014-02-08 16:33:59 UTC
The grid used to take all the window, that was great for playing on touchscreen. But on Rawhide’s 3.11.5, in medium, the grid is already too small, and in big, it is totally unplayable even with mouse.
Comment 1 Michael Catanzaro 2014-02-08 18:02:10 UTC
I think I broke this relatively recently.

Thomas, hopefully you have time to get to this next week as we'd planned; if not, please assign to me. (Thanks!)
Comment 2 Michael Catanzaro 2014-02-08 18:21:54 UTC
*** Bug 723068 has been marked as a duplicate of this bug. ***
Comment 3 Arnaud B. 2014-02-09 01:59:01 UTC
As it’s probably related: at the end of a game, there’s a cool new button “restart”, but it uncenter the grid. I think it shouldn’t move the grid, just appear where it is (or elsewhere, no idea where that’s better in fact).
Comment 4 Michael Catanzaro 2014-02-09 02:48:44 UTC
That's Bug #723067 -- I'm not really sure what to do about it...
Comment 5 Michael Catanzaro 2014-02-16 17:34:01 UTC
Unfortunately simply reverting my recent changes brings back both Bug #720227 (which I apparently unintentionally fixed when I introduced this bug) *and* Bug #720228 (not yet sure why), and either of those alone is arguably worse than this.  (Not that this bug is not bad; it is.)
Comment 6 Michael Catanzaro 2014-02-16 23:47:53 UTC
The following fix has been pushed:
a7ab78c Always allocate enough space for the board
Comment 7 Michael Catanzaro 2014-02-16 23:47:56 UTC
Created attachment 269345 [details] [review]
Always allocate enough space for the board

Fixed size was a really bad idea. Mea culpa.