Always allocate enough space for the board

Fixed size was a really bad idea. Mea culpa.

https://bugzilla.gnome.org/show_bug.cgi?id=723912